[package]
name = "vai"
version = "0.1.0"
edition = "2021"
description = "Vanila Neural Networks (VAI) is a set of examples aimed to show how AI libraries work under the hood"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mindtree_utils = "0.4.0"
ndarray = "0.15.6"
rand = "0.8.5"
